outbound.tf
resource "aws_security_group" "outbound" {
  name                    = "${data.terraform_remote_state.vpc.vpc_name}_sg_outbound"
  description             = "Allow ** ALL ** OUTBOUND traffic"
  vpc_id                  = "${data.terraform_remote_state.vpc.vpc_id}"
  revoke_rules_on_delete  = true

  # ref: https://www.terraform.io/docs/configuration/interpolation.html#merge-map1-map2-
  tags = "${merge(map("Name","${data.terraform_remote_state.vpc.vpc_name}_sg_outbound"), var.tags)}"

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    self        = true
  }

  
}
